--- a/index.html
+++ b/index.html
@@ -1067,7 +1067,7 @@
         
                                 <li class = "text-white d-flex justify-content-between align-items-center pb-4 pt-4"> 
                                     <div class = "d-flex">
-                                        <img  src = "src/image/location.svg" height = "50" class = "pe-4"> <div class = "d-block"><strong> location</strong> <br><span class=""> 205 Mabini St. Caloocan City</span> </div>
+                                        <img  src = "src/image/location.svg" height = "50" class = "pe-4"> <div class = "d-block"><strong> Location</strong> <br><span class=""> 205 Mabini St. Caloocan City</span> </div>
                                     </div>
                                 </li>
                             </ul>
