--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <ul class = "navbar-nav ms-2 me-auto mb-2 mb-lg-0"> 
-                            <li class = "nav-item links"> <a class="nav-link" href="#">Home</a> </li>
+                            <li class = "nav-item links"> <a class="nav-link" href="#home">Home</a> </li>
                             <li class = "nav-item links"> <a class="nav-link " href="#about">About</a> </li>             
                             <li class = "nav-item links"> <a class="nav-link" href="#skills">Skills</a> </li>
                             <li class = "nav-item links"> <a class="nav-link" href="#qualification">Qualification</a> </li>
