--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                             <li class = "text-white pb-4 pt-4"> 
                                 <div>
                                     <div class = "d-flex justify-content-between" id = "frontend">
-                                        <div> <img  src = "src/image/bracket.svg" height = "50"> <strong> Front End development </strong> </div>
+                                        <div> <img  src = "src/image/bracket.svg" height = "50"> <strong> Frontend </strong> </div>
                                         <span class="dropdown-toggle"></span>
                                     </div>
 
@@ -165,7 +165,7 @@
                             <li class = "text-white  pb-4 pt-4"> 
                                 <div>
                                     <div class = "d-flex justify-content-between" id = "backend">
-                                        <div> <img  src = "src/image/bracket.svg" height = "50"> <strong> Back End development </strong> </div>
+                                        <div> <img  src = "src/image/bracket.svg" height = "50"> <strong> Backend </strong> </div>
                                         <span class="dropdown-toggle"></span>
                                     </div>
                                     <div class = "row text-center mt-4" id = "backend-list" style = "display: none;">
