--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class = "row d-flex justify-content-center align-items-center">
                     <div class = "col-md-6 col-sm-12 " data-aos="fade-right">
                       <div class = "text-center pb-4 pt-4">      
-                            <img  src = "src/image/thisisme.png" height = "400" class = "rounded-circle ">
+                            <img  src = "src/image/thisisme.png" class = "rounded-circle img-fluid">
                       </div>
                     </div>
                     <div class = "col-md-6 col-sm-12 text-white info" data-aos="fade-up"> 
@@ -123,7 +123,7 @@
                                     <div class = "row text-center mt-4" id = "frontend-list" style = "display: none;">
                                       <div class = "col-sm-12 col-lg-12">
                                         <div style = "overflow: auto; width: 100%;">
-                                          <ul class = "d-flex justify-content-center align-items-center">
+                                          <ul class = "d-flex justify-content-evenly">
                                             <li class = "pe-3 ps-3"> <img  src = "src/image/html.svg" height = "50"> 
                                               <p> HTML <p>
                                             </li>
