--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                     <div class = "row text-center mt-4" id = "frontend-list" style = "display: none;">
                                       <div class = "col-sm-12 col-lg-12">
                                         <div style = "overflow: auto; width: 100%;">
-                                          <ul class = "d-flex justify-content-evenly">
+                                          <ul class = "d-flex justify-content-between">
                                             <li class = "pe-3 ps-3"> <img  src = "src/image/html.svg" height = "50"> 
                                               <p> HTML <p>
                                             </li>
