--- a/index.html
+++ b/index.html
@@ -174,28 +174,30 @@
                                   </div>
                                   <div class = "row text-center mt-4" id = "frameworks-list" style = "display: none;">
                                     <div class = "col-sm-12 col-lg-12">
-                                      <ul class = "d-flex justify-content-between align-items-center">
-                                        <li class = "pe-3 ps-3"> 
-                                          <img  src = "src/image/reactjs.svg" height = "50">
-                                          <p> React Js <p>
-                                        </li>
-                                        <li class = "pe-3 ps-3"> 
-                                          <img  src = "src/image/vuejs.svg" height = "50">
-                                          <p> Vue Js</p>
-                                        </li>
-                                        <li class = "pe-3 ps-3"> 
-                                          <img  src = "src/image/css.svg" height = "50">
-                                          <p> Bootstrap </p>
-                                        </li>
-                                        <li class = "pe-3 ps-3"> 
-                                          <img  src = "src/image/laravel1.svg" height = "50">
-                                          <p> Laravel</p>
-                                        </li>
-                                        <li class = "pe-3 ps-3"> 
-                                          <img  src = "src/image/django1.svg" height = "50">
-                                          <p> Django </p>
-                                        </li>
-                                      </ul>
+                                      <div  style = "overflow: auto; width: 100%;">
+                                        <ul class = "d-flex justify-content-between">
+                                          <li class = "pe-3 ps-3"> 
+                                            <img  src = "src/image/reactjs.svg" height = "50">
+                                            <p> React Js <p>
+                                          </li>
+                                          <li class = "pe-3 ps-3"> 
+                                            <img  src = "src/image/vuejs.svg" height = "50">
+                                            <p> Vue Js</p>
+                                          </li>
+                                          <li class = "pe-3 ps-3"> 
+                                            <img  src = "src/image/css.svg" height = "50">
+                                            <p> Bootstrap </p>
+                                          </li>
+                                          <li class = "pe-3 ps-3"> 
+                                            <img  src = "src/image/laravel1.svg" height = "50">
+                                            <p> Laravel</p>
+                                          </li>
+                                          <li class = "pe-3 ps-3"> 
+                                            <img  src = "src/image/django1.svg" height = "50">
+                                            <p> Django </p>
+                                          </li>
+                                        </ul>
+                                      </div>
                                     </div>
                                   </div>
                               </div>     
@@ -230,21 +232,23 @@
                                     </div>
                                     <div class = "row text-center mt-4" id = "backend-list" style = "display: none;">
                                       <div class = "col-sm-12 col-lg-12">
-                                        <ul class = "d-flex justify-content-between align-items-center">
-                                          <li class = "pe-3 ps-3"> 
-                                            <img  src = "src/image/node.svg" height = "50">
-                                            <p> Node js <p>
-                                          </li>
-                                          <li class = "pe-3 ps-3"> 
-                                            <img  src = "src/image/django1.svg" height = "50">
-                                            <p> Django </p>
-                                          </li>
-                                          <li class = "pe-3 ps-3"> 
-                                            <img  src = "src/image/laravel1.svg" height = "50">
-                                            <p> Laravel </p>
-                                          </li>
-                                  
-                                        </ul>
+                                        <div  style = "overflow: auto; width: 100%;">
+                                          <ul class = "d-flex justify-content-between">
+                                            <li class = "pe-3 ps-3"> 
+                                              <img  src = "src/image/node.svg" height = "50">
+                                              <p> Node js <p>
+                                            </li>
+                                            <li class = "pe-3 ps-3"> 
+                                              <img  src = "src/image/django1.svg" height = "50">
+                                              <p> Django </p>
+                                            </li>
+                                            <li class = "pe-3 ps-3"> 
+                                              <img  src = "src/image/laravel1.svg" height = "50">
+                                              <p> Laravel </p>
+                                            </li>
+                                    
+                                          </ul>
+                                        </div>
                                       </div>
                                     </div>
 
