--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="icon" href="src/image/favicon.png">
+    <link rel="icon" href="src/image/ar-logo.png">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,7 +35,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark sticky-top" style = "background-color: #555555;">
             <div class="container">
                 <div class = "d-flex justify-content-start">
-                    <a href = "#home" > <img  src = "src/image/a.png" class = "rounded-circle" height = "30"> </a>
+                    <a href = "#home" > <img  src = "src/image/ar-logo.jpg" class = "rounded-circle " height = "30"> </a>
                 </div>
                 <div class = "d-flex justify-content-end">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -1162,7 +1162,7 @@
                <div class = "col-lg-6 col-md-6 col-sm-6">
                 <div class = "d-flex justify-content-center align-items-center">
                   <div class = " mt-5"> 
-                    <img  src = "src/image/a.png" class = "rounded-circle" height = "90">
+                    <img  src = "src/image/ar-logo.jpg" class = "rounded-circle" height = "90">
                   </div>
                 </div>
                </div>
