--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                 <div class = "d-flex justify-content-end">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
-                </div>
-                </button>
-              
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
+                    </button>
+                </div>  
+                
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ">
                         <ul class = "navbar-nav ms-2 me-auto mb-2 mb-lg-0"> 
                             <li class = "nav-item links"> <a class="nav-link" href="#home">Home</a> </li>
                             <li class = "nav-item links"> <a class="nav-link " href="#about">About</a> </li>             
