--- a/index.html
+++ b/index.html
@@ -379,10 +379,7 @@
                           <div class="card mb-3 text-white" style = "background-color: #555555;">
                               <img  src="src/image/output/inventory/2.png" class="card-img-top p-2 rounded" >
                               <div class="card-body text-center text-scroll" >
-                                  <h5 style = "color: #f0e160;" class = "fw-bold"> Meyaw Pharmacy Inventory System</h5>
-                                  
-                                      <p class="card-text text-danger">Under Development </p>
-                                  
+                                  <h5 style = "color: #f0e160;" class = "fw-bold"> Meyaw Pharmacy Inventory System</h5>  
 
                                   <div class = "d-flex justify-content-center align-items-center " data-bs-toggle="modal" data-bs-target="#inventory">
                                       <div id = "btn-view-inventory" class = "d-none text-center d-flex justify-content-center align-items-center" style = "position: absolute;  height: 100%; top: 1px; background-color: rgba(51,51,51, 0.9); width: 100%; border: 1px solid #c7588b; border-radius: 5px;">
@@ -460,6 +457,18 @@
                                                     </div>
                                                     <div class="carousel-item">
                                                       <img  src="src/image/output/inventory/19.png" class="d-block w-100" >
+                                                    </div>
+                                                    <div class="carousel-item">
+                                                      <img  src="src/image/output/inventory/20.png" class="d-block w-100" >
+                                                    </div>
+                                                    <div class="carousel-item">
+                                                      <img  src="src/image/output/inventory/21.png" class="d-block w-100" >
+                                                    </div>
+                                                    <div class="carousel-item">
+                                                      <img  src="src/image/output/inventory/22.png" class="d-block w-100" >
+                                                    </div>
+                                                    <div class="carousel-item">
+                                                      <img  src="src/image/output/inventory/23.png" class="d-block w-100" >
                                                     </div>
                                                   </div>
                                                   <button class="carousel-control-prev" type="button" data-bs-target="#inv" data-bs-slide="prev">
