--- a/index.html
+++ b/index.html
@@ -1393,6 +1393,7 @@
                 <div class = "d-flex justify-content-center align-items-center">
                     <div class = "mt-5">
                       <ul class = "footer-follow">
+                        <strong class = "footer-color">Portfolio </strong>
                         <div class = "mt-2">
                           <li class = "pb-2 footer-padding-text"> <a href = "#about" class = "footer-link footer-color" style = "text-decoration: none;"> About </a>  </li>
                           <li class = "pb-2 footer-padding-text"> <a href = "#qualification" class = "footer-link footer-color" style = "text-decoration: none;"> Download Resume </a> </li>
