--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                     </div>
 
                     <div class = "d-flex justify-content-center align-items-center mt-3">
-                       <a href = "https://drive.google.com/file/d/1HPwaazxEmDXOZ7QX4_pNYE8DjHeu2b9Y/view?usp=sharing" target = "_blank"> <button class = "btn about-btn"> Download Resume </button> </a>
+                       <a href = "https://drive.google.com/file/d/1GmMHY_EQ2BZWLoxBGgzesPBC6zpQxaN8/view?usp=sharing" target = "_blank"> <button class = "btn about-btn"> Download Resume </button> </a>
                     </div>
 
                 </div>
@@ -424,7 +424,7 @@
                     <div class = "row">
                         <!-- INVENTORY SYSTEM  -->
                         <div class = "col-lg-4 col-md-6 col-sm-6" id = "card-item-inventory">
-                          <div class="card mb-3 text-white reveal-left" style = "background-color: #555555;">
+                          <div class="card mb-3 text-white" style = "background-color: #555555;">
                               <img  src="src/image/output/inventory/2.png" class="card-img-top p-2 rounded" >
                               <div class="card-body text-center text-scroll" >
                                   <h5 style = "color: #f0e160;" class = "fw-bold"> Pharmacy Inventory System</h5>  
@@ -546,7 +546,7 @@
 
                         <!-- Oycher Coffeeshop  -->
                         <div class = "col-lg-4 col-md-6 col-sm-6" id = "card-item" >
-                            <div class="card mb-3 text-white reveal-right" style = "background-color: #555555;">
+                            <div class="card mb-3 text-white" style = "background-color: #555555;">
                                 <img  src="src/image/output/laravel-coffeeshop/2.png" class="card-img-top p-2 rounded" >
                                 <div class="card-body text-center text-scroll" >
                                     <h5 style = "color: #f0e160;" class = "fw-bold">Oycher Coffeeshop</h5>
@@ -643,7 +643,7 @@
 
                         <!-- Larvel CRUD -->
                         <div class = "col-lg-4 col-md-6 col-sm-6" id = "card-item-crud">
-                            <div class="card mb-3 text-white reveal-left" style = "background-color: #555555;">
+                            <div class="card mb-3 text-white" style = "background-color: #555555;">
                                 <img  src="src/image/output/laravel-crud/1.png" class="card-img-top p-2 rounded" >
                                 <div class="card-body text-center text-scroll" >
                                     <h5 style = "color: #f0e160;" class = "fw-bold">Laravel CRUD</h5>
@@ -725,7 +725,7 @@
 
                         <!--- Barangay Management System -->
                         <div class = "col-lg-4 col-md-6 col-sm-6" id = "card-item-bms">
-                            <div class="card mb-3 text-white reveal-right" style = "background-color: #555555;">
+                            <div class="card mb-3 text-white " style = "background-color: #555555;">
                                 <img  src="src/image/output/bms/1.png" class="card-img-top p-2 rounded" >
                                 <div class="card-body text-center text-scroll" >
                                     <div style = "height: 100px;">
@@ -849,7 +849,7 @@
 
                         <!-- Calculator -->
                         <div class = " col-lg-4 col-md-6 col-sm-6" id = "card-item-calculator">
-                            <div class="card mb-3 text-white reveal-left" style = "background-color: #555555;">
+                            <div class="card mb-3 text-white" style = "background-color: #555555;">
                                 <img  src="src/image/output/calculator/1.png" class="card-img-top p-2 rounded" >
                                 <div class="card-body text-center text-scroll" >
                                     <h5 style = "color: #f0e160;" class = "fw-bold">Calculator</h5>
@@ -916,7 +916,7 @@
 
                         <!-- ARCS -->
                         <div class = " col-lg-4 col-md-6 col-sm-6" id = "card-item-arcs">
-                          <div class="card mb-3 text-white reveal-right" style = "background-color: #555555;">
+                          <div class="card mb-3 text-white" style = "background-color: #555555;">
                               <img  src="src/image/output/arcs/1.png" class="card-img-top p-2 rounded" >
                               <div class="card-body text-center text-scroll" >
                                   <h5 style = "color: #f0e160;" class = "fw-bold">ARCS</h5>
@@ -1007,7 +1007,7 @@
 
                         <!-- Red velvet -->
                         <div class = " col-lg-4 col-md-6 col-sm-6" id = "card-item-rv">
-                            <div class="card mb-3 text-white reveal-left" style = "background-color: #555555;">
+                            <div class="card mb-3 text-white" style = "background-color: #555555;">
                                 <img  src="src/image/output/rv/1.png" class="card-img-top p-2 rounded" >
                                 <div class="card-body text-center text-scroll" >
                                     <h5 style = "color: #f0e160;" class = "fw-bold">Red velvet Website</h5>
@@ -1105,7 +1105,7 @@
 
                         <!-- Face Recognition -->
                         <div class = " col-lg-4 col-md-6 col-sm-6" id = "card-item-fr">
-                            <div class="card mb-3 text-white reveal-right" style = "background-color: #555555;">
+                            <div class="card mb-3 text-white" style = "background-color: #555555;">
                                 <img  src="src/image/output/face-recognition/1.png" class="card-img-top p-2 rounded" >
                                 <div class="card-body text-center text-scroll" >
                                     <h5 style = "color: #f0e160;" class = "fw-bold">FRIAM </h5>
@@ -1191,7 +1191,7 @@
 
                         <!-- System -->
                         <div class = " col-lg-4 col-md-6 col-sm-6" id = "card-item-system">
-                            <div class="card mb-3 text-white reveal-left" style = "background-color: #555555;">
+                            <div class="card mb-3 text-white" style = "background-color: #555555;">
                                 <img  src="src/image/output/system/1.png" class="card-img-top p-2 rounded" >
                                 <div class="card-body text-center text-scroll" >
                                     <h5 style = "color: #f0e160;" class = "fw-bold">DDAJJ E-loading shop</h5>
@@ -1265,7 +1265,7 @@
 
                         <!-- RPS -->
                         <div class = " col-lg-4 col-md-6 col-sm-6" id = "card-item-rps">
-                          <div class="card mb-3 text-white reveal-right" style = "background-color: #555555;">
+                          <div class="card mb-3 text-white" style = "background-color: #555555;">
                               <img  src="src/image/output/rps/1.png" class="card-img-top p-2 rounded" >
                               <div class="card-body text-center text-scroll" >
                                   <h5 style = "color: #f0e160;" class = "fw-bold">RPS</h5>
