--- a/index.html
+++ b/index.html
@@ -21,31 +21,7 @@
     <script src="https://kit.fontawesome.com/75d9129d58.js" crossorigin="anonymous"></script>
     
 </head>
-<style>
-  .reveal-left{
-    position: relative;
-    transform: translateX(-150px);
-    opacity: 0;
-    transition: 1s all ease;
-  }
-  
-  .reveal-left.actives{
-    transform: translateX(0);
-    opacity: 1;
-  }
 
-  .reveal-right{
-    position: relative;
-    transform: translateX(150px);
-    opacity: 0;
-    transition: 1s all ease;
-  }
-  
-  .reveal-right.actives{
-    transform: translateX(0);
-    opacity: 1;
-  }
-</style>
 <body>
   
  <div id = "loading" class = "d-flex justify-content-center align-items-center" style = "position:fixed; height: 100vh; width: 100vw; z-index: 9999;">
@@ -397,7 +373,7 @@
                     </div>
 
                     <div class = "d-flex justify-content-center align-items-center mt-3">
-                       <a href = "https://drive.google.com/file/d/1GmMHY_EQ2BZWLoxBGgzesPBC6zpQxaN8/view?usp=sharing" target = "_blank"> <button class = "btn about-btn"> Download Resume </button> </a>
+                       <a href = "https://drive.google.com/file/d/1BuDE-k5iuVMD_QrbF2Z6WDgXjeHYXBTg/view?usp=sharing" target = "_blank"> <button class = "btn about-btn"> Download Resume </button> </a>
                     </div>
 
                 </div>
@@ -1360,7 +1336,7 @@
         
                                 <li class = "text-white d-flex justify-content-between align-items-center pb-4 pt-4"> 
                                     <div class = "d-flex">
-                                        <img  src = "src/image/location.svg" height = "35" class = "pe-4"> <div class = "d-block"><strong> Location</strong> <br><span class=""> 205 Mabini St. Caloocan City</span> </div>
+                                        <img  src = "src/image/location.svg" height = "35" class = "pe-4"> <div class = "d-block"><strong> Location</strong> <br><span class=""> 205 Kabulusan 1-A Caloocan City</span> </div>
                                     </div>
                                 </li>
                             </ul>
