--- a/index.html
+++ b/index.html
@@ -1395,7 +1395,7 @@
         
                                 <li class = "text-white d-flex justify-content-between align-items-center pb-4 pt-4"> 
                                     <div class = "d-flex">
-                                        <img  src = "src/image/mail.svg" height = "35" class = "pe-4"> <div class = "d-block"><strong> Email</strong> <br><span class=""> kororolucilfer@gmail.com</span> </div>
+                                        <img  src = "src/image/mail.svg" height = "35" class = "pe-4"> <div class = "d-block"><strong> Email</strong> <br><span class=""> archer.cabahug21@gmail.com</span> </div>
                                     </div>
                                 </li>
         
